# WT_BSP

./: .gitignore  AGENTS.md  LICENSE  README.md  README_CN.md
.github/workflows/: blink-build.yml
components/wt_bsp/: CMakeLists.txt  Kconfig.projbuild  README.md  idf_component.yml  wt_bsp_config_internal.h
components/wt_bsp/boards/: CMakeLists.txt  Kconfig.projbuild
components/wt_bsp/boards/WT9932C2-TINY/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  board_config.h
components/wt_bsp/boards/WT9932C3-TINY/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  board_config.h
components/wt_bsp/boards/WT9932C5-TINY/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  board_config.h
components/wt_bsp/boards/WT9932C61-TINY/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  board_config.h
components/wt_bsp/boards/WT9932P4-TINY/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  board_config.h
components/wt_bsp/boards/WT9932P4C61-TINY/: CMakeLists.txt  Kconfig.projbuild  board.c  board.h  board_config.h
components/wt_bsp/features/: CMakeLists.txt  Kconfig.projbuild
components/wt_bsp/features/board/: CMakeLists.txt  Kconfig.projbuild  wt_bsp_board.c
components/wt_bsp/features/board/include/: wt_bsp_board_port.h
components/wt_bsp/features/button/: CMakeLists.txt  Kconfig.projbuild  wt_bsp_button.c
components/wt_bsp/features/button/include/: wt_bsp_button.h  wt_bsp_button_port.h
components/wt_bsp/features/csi/: CMakeLists.txt  Kconfig.projbuild  wt_bsp_csi.c
components/wt_bsp/features/csi/include/: wt_bsp_csi.h  wt_bsp_csi_port.h
components/wt_bsp/features/dsi/: CMakeLists.txt  Kconfig.projbuild  wt_bsp_dsi.c
components/wt_bsp/features/dsi/include/: wt_bsp_dsi.h  wt_bsp_dsi_port.h
components/wt_bsp/features/rgb/: CMakeLists.txt  Kconfig.projbuild  wt_bsp_rgb.c
components/wt_bsp/features/rgb/include/: wt_bsp_rgb.h  wt_bsp_rgb_port.h
components/wt_bsp/features/sdmmc/: CMakeLists.txt  Kconfig.projbuild  wt_bsp_sdmmc.c
components/wt_bsp/features/sdmmc/include/: wt_bsp_sdmmc.h  wt_bsp_sdmmc_port.h
components/wt_bsp/features/touch/: CMakeLists.txt  Kconfig.projbuild  wt_bsp_touch.c
components/wt_bsp/features/touch/include/: wt_bsp_touch.h  wt_bsp_touch_port.h
components/wt_bsp/include/: wt_bsp.h  wt_bsp_board.h  wt_bsp_button.h  wt_bsp_button_port.h  wt_bsp_csi.h  wt_bsp_csi_port.h  wt_bsp_dsi.h  wt_bsp_dsi_port.h  wt_bsp_internal.h  wt_bsp_lcd.h  wt_bsp_port.h  wt_bsp_rgb.h  wt_bsp_rgb_port.h  wt_bsp_sdmmc.h  wt_bsp_sdmmc_port.h  wt_bsp_touch.h  wt_bsp_touch_port.h
components/wt_bsp/src/: wt_bsp.c  wt_bsp_board.c  wt_bsp_button.c  wt_bsp_csi.c  wt_bsp_dsi.c  wt_bsp_rgb.c  wt_bsp_sdmmc.c  wt_bsp_touch.c
components/wt_bsp/tools/: wt_bsp_p4_flash.py  wt_bsp_project.cmake  wt_bsp_set_board.py
components/wt_bsp/tools/p4_flash/: README.md
components/wt_bsp/tools/p4_flash/firmware/: SHA256SUMS
examples/camera/csi/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults  sdkconfig.wt9932p4_tiny
examples/camera/csi/main/: CMakeLists.txt  main.c
examples/display/dsi/: CMakeLists.txt  README.md  README_CN.md  partitions.csv  sdkconfig.defaults
examples/display/dsi/main/: main.c
examples/get-started/blink/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults.esp32p4  sdkconfig.wt9932c5_tiny  sdkconfig.wt9932p4_tiny  sdkconfig.wt9932p4c61_tiny
examples/get-started/blink/main/: main.c
examples/get-started/bsp_self_test/: .gitignore  CMakeLists.txt
examples/get-started/bsp_self_test/main/: CMakeLists.txt  main.c
examples/get-started/button/: README.md  README_CN.md  sdkconfig.wt9932c2_tiny  sdkconfig.wt9932c3_tiny  sdkconfig.wt9932c61_tiny
examples/get-started/button/main/: main.c
examples/get-started/c61-hello-through-p4/: CMakeLists.txt  README.md  README_CN.md
examples/get-started/c61-hello-through-p4/main/: main.c
examples/lcd/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32p4
examples/lcd/main/: idf_component.yml  main.c
examples/storage/sdmmc/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4‎  sdkconfig.wt9932p4_tiny  sdkconfig.wt9932p4c61_tiny
examples/storage/sdmmc/main/: CMakeLists.txt  main.c
examples/wifi/esp-hosted/: README.md
examples/wifi/esp-hosted/wt9932p4c61-tiny/: CMakeLists.txt  README.md  README_CN.md  partitions.csv  sdkconfig.defaults
examples/wifi/esp-hosted/wt9932p4c61-tiny/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp  wifi_manager_bridge.cpp  wifi_manager_bridge.h  wifi_remote_adapter.h
examples/wt_factory/esp32p4/: README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4
examples/wt_factory/esp32p4/main/: CMakeLists.txt  idf_component.yml  lvgl_demo_ui.c  main.c
examples/wt_factory/wt9932p4-tiny/: CMakeLists.txt  README.md  README_CN.md  partitions_16MB.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.wt9932p4_tiny
examples/wt_factory/wt9932p4-tiny/main/: CMakeLists.txt  idf_component.yml  lvgl_ui.c  main.c
examples/wt_factory/wt9932p4c61-tiny/: CMakeLists.txt  README.md  README_CN.md  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.wt9932p4c61_tiny
examples/wt_factory/wt9932p4c61-tiny/main/: CMakeLists.txt  idf_component.yml  lvgl_demo_ui.c  lvgl_ui.c  main.c  wifi_manager_bridge.cpp  wifi_manager_bridge.h  wifi_remote_adapter.h
